--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <div class="whole">
-    <img src="resources/logo.svg" rel="logo of the page">
+    <img src="logo.svg" rel="logo of the page">
     <h2>Join our newsletter</h2>
 
    <p class="written"> Keep up with our latest collections, exclusive deals, and special offers!<br/> We introduce a new collection every week, so stay tuned to snag the hottest items just for you.</p>
